--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.11.0",
     "openai": "^5.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
@@ -24,6 +23,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "prettier": "3.6.2",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   }
 }
