--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "arrowParens": "always",
-  "tabWidth": 2,
-  "useTabs": true
+	"semi": true,
+	"singleQuote": true,
+	"arrowParens": "always",
+	"tabWidth": 2,
+	"useTabs": true,
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
