--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "openai": "^5.16.0",
+    "openai": "^5.19.1",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
