--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup pnpm
-        uses: pnpm/actions-setup@v4
+        uses: pnpm/action-setup@v4
         with:
           version: 10
       - name: Setup node
