--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"path": "^0.12.7",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-router": "^7.8.2",
 		"tailwindcss": "^4.1.11",
+		"uuid": "^12.0.0",
 		"zod": "^4.1.5"
 	},
 	"devDependencies": {
